[CW40]
+ SyncProxyAndroid SDK: Extend ShowConstantTBT request object.
+ PerformInteraction dialog: add interactionLayout parameter.
+ SyncProxyAndroid SDK: Extend PerformInteraction request and response objects.

[CW35.3]
*Fixed crashes on end session/disconnect.

[CW35.2]
*OnKeyboard event support added

[CW35.1]
*Added MobileNavi AppType registration button
*Added Mobile Navi session support
*Added USB Support

[CW35]
* SoftButtons can be sent without SystemAction parameter.
* SyncProxyAndroid SDK: Fix creating more and more TCP transports after disconnects.
- SyncProxyAndroid SDK: TCPTransport: Remove the autoReconnect feature, as it's handled by the protocol.
* Revert "Fix SyncProxyTester freezing when trying to send a message after WiFi is connected and then turned off."

[CW34]
* Fix: RegisterAppInterface response with DUPLICATE_NAME shouldn't show up multiple times on WiFi.
* Fix sending GenericRequest message from XML tests.
* Fix SyncProxyTester freezing when trying to send a message after WiFi is connected and then turned off.
* Fix Exit context menu item: it sends EndSession message before exiting.
* PerformInteraction, Show, SetGlobalProperties, Soft Buttons dialogs: use image filenames with extensions by default.
* SyncProxyAndroid SDK: EndSession message includes hash ID that was received with StartSessionACK.
* Fix a crash when trying to send SyncPData request from XML test.

[CW33]
* Use SyncMsgVersion 2.2.
+ The user can send UnregisterAppInterface message from GUI.
* SyncProxyAndroid SDK: fix two bugs with sending huge RPC requests.

[CW32]
+ Add Float tag parsing to XML tests parser.
* Remove the persistent top-level submenu with id = 0.
* SyncProxyAndroid SDK: temporarily turn on verbose logging of BTTransport events.
* SyncProxyAndroid SDK: update result code values.

[CW31]
* SyncProxyAndroid SDK: fix a crash on sending GenericRequest message.
* SyncProxyAndroid SDK: cherry-pick Ford's changes: add SyncPData function.