@@ -1,4 +1,5 @@
 [CW40]
++ ShowConstantTBT dialog: add timeToDestination and nextTurnIcon parameters.
 + SyncProxyAndroid SDK: Extend ShowConstantTBT request object.
 + PerformInteraction dialog: add interactionLayout parameter.
 + SyncProxyAndroid SDK: Extend PerformInteraction request and response objects.
